fix: 替换vuex，使用pinia做状态管理

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
+    "pinia": "^2.0.29",
     "screenfull": "^6.0.2",
     "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.1.5",
-    "vue-types": "^4.2.1",
-    "vuex": "^4.0.2"
+    "vue-types": "^4.2.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
