--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.0.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.28",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
