--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "sourceMap": false,
     "baseUrl": ".",
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "node"
     ],
     "paths": {
       "@/*": [
