--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
     "element-plus": "^2.2.28",
+    "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -28,6 +29,7 @@
     "vue-types": "^4.2.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
