--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
-    "element-plus": "^2.2.28",
+    "element-plus": "^2.6.3",
     "file-saver": "^2.0.5",
     "fuse.js": "^6.6.2",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
